# QT_Ueyes

./: .gitignore  CMakeLists.txt  README.md
Ueyes/: CMakeLists.txt
Ueyes/coreUeyes/: CMakeLists.txt
Ueyes/coreUeyes/coreDock/: CMakeLists.txt  DockAreaWidget.cpp  DockOverlay.cpp  DockWidget.h  FloatingDockContainer.cpp  SysInfoFetcher.cpp  SysInfoFetcher.h  videobox.cpp
Ueyes/coreUeyes/plugins/: readme.md
Ueyes/coreUeyes/services/: BaseInterface.h
Ueyes/guiUeyes/: CMakeLists.txt  ImageViewer.h  RenderWidget.h  StatusDialog.cpp  StatusDialog.h  StatusDialog.ui  gui_ueyes_global.h
Ueyes/pluginUeyes/: CMakeLists.txt
Ueyes/pluginUeyes/BaseFunc_Lib/: BaseFunc_Lib.cpp  BaseFunc_Lib.h  BaseFunc_Lib_global.h  ReadMe.md
Ueyes/pluginUeyes/CV_Lib/: BasicModule.cpp  CMakeLists.txt  OpencvFunc.h  main.cpp
Ueyes/pluginUeyes/Camera_Lib/: CMakeLists.txt
Ueyes/pluginUeyes/Camera_Lib/Basler_Lib/: Basler_Lib.cpp  Basler_Lib.h  Basler_Lib_global.h  CMakeLists.txt
Ueyes/pluginUeyes/Camera_Lib/Hikvision_Lib/: CMakeLists.txt  Hikvision_Lib.cpp  Hikvision_Lib.h  Hikvision_Lib_global.h  MvCamera.cpp  MvCamera.h
Ueyes/pluginUeyes/Camera_Lib/PCWebcam_Lib/: CMakeLists.txt  PCWebcam_Lib.cpp  PCWebcam_Lib.h  PCWebcam_Lib_global.h
Ueyes/pluginUeyes/Python_Lib/: pythonlib.cpp  pythonlib.h
Ueyes/pluginUeyes/QtNode_Lib/: CMakeLists.txt
Ueyes/pluginUeyes/QtNode_Lib/include/QtNodes/internal/: AbstractGraphModel.hpp  AbstractNodeGeometry.hpp  DataFlowGraphModel.hpp  DataFlowGraphicsScene.hpp  Definitions.hpp  NodeDelegateModel.hpp  NodeDelegateModelRegistry.hpp  NodeGraphicsObject.hpp  NodeImgDelegateModel.cpp  NodeImgDelegateModel.h
Ueyes/pluginUeyes/QtNode_Lib/src/: DataFlowGraphModel.cpp  DataFlowGraphicsScene.cpp  DefaultHorizontalNodeGeometry.cpp  DefaultHorizontalNodeGeometry.hpp  DefaultVerticalNodeGeometry.cpp  DefaultVerticalNodeGeometry.hpp  GraphicsView.cpp  NodeDelegateModelRegistry.cpp  NodeGraphicsObject.cpp  UndoCommands.cpp  UndoCommands.hpp
Ueyes/pluginUeyes/SqlLite_Lib/: CMakeLists.txt  SqlInterface.h  sqlLitelib.cpp  sqlLitelib.h
Ueyes/pluginUeyes/SqlLite_Lib/data/: wen.txt
Ueyes/pluginUeyes/SqlLite_Lib/models/SVM/: SVM_test_predict.txt
Ueyes/pluginUeyes/Widget_Lib/: CMakeLists.txt
Ueyes/pluginUeyes/Widget_Lib/CameraViewer/: CMakeLists.txt  CameraViewer.cpp  CameraViewer.h  CameraViewer_global.h  mWindow.cpp  mWindow.h  mainwindow.ui  videobox.cpp  videobox.h
Ueyes/pluginUeyes/Widget_Lib/DataTableViewer/: BaseInterface.h  CMakeLists.txt  DataTableViewer.ui  DataTableViewer_global.h  SqlInterface.h  datatableviewer.cpp  datatableviewer.h
Ueyes/pluginUeyes/Widget_Lib/FuncViewer/: Form.ui  FuncViewerPage.ui  FuncViewerWidget.cpp  FuncViewerWidget.h
Ueyes/studioUeyes/: BasicWindow.cpp  BasicWindow.h  CMakeLists.txt  DebugWin.cpp  DebugWin.hpp  DesignWindow.cpp  DesignWindow.h  ImageGrayModel.cpp  ImageGrayModel.h  ImageLoaderModel.cpp  ImageLoaderModel.hpp  ImageShowModel.cpp  ImageShowModel.hpp  MainWindow.cpp  MainWindow.h  WelcomeWindow.cpp  WelcomeWindow.h  dark-style.qss  demo.qrc  main.cpp  mainwindow.ui
Ueyes/studioUeyes/res/: visual_studio_light.css
Ueyes/studioUeyes/shared/resources/: shared.qrc
demo/: BasicWindow.cpp  BasicWindow.h  CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.cpp.autosave  MainWindow.h  SqlInterface.h  StatusDialog.ui  WelcomeWindow.cpp  WelcomeWindow.h  main.cpp  main.qml  mainwindow.ui  welcomewindow.ui
examples/: CMakeLists.txt
examples/autohide/: CMakeLists.txt
examples/centralwidget/: CMakeLists.txt
examples/deleteonclose/: CMakeLists.txt
examples/dockindock/: CMakeLists.txt
examples/emptydockarea/: CMakeLists.txt
examples/hideshow/: CMakeLists.txt
examples/sidebar/: CMakeLists.txt
examples/simple/: CMakeLists.txt
modules/: CMakeLists.txt
modules/BaseFunc_Lib/: CMakeLists.txt
modules/CV_Lib/: BasicModule.h  CMakeLists.txt  OpencvFunc.cpp  OpencvFunc_globals.h  form.ui
modules/CV_Lib/utils/: ImageProcess.cpp  ImageRead.cpp
modules/Python_Lib/: CMakeLists.txt  Python_Lib_global.h  pythonlib.cpp  pythonlib.h
modules/SqlLite_Lib/: CMakeLists.txt  SqlInterface.h  SqlLite_Lib.cpp  SqlLite_Lib.h  SqlLite_Lib_global.h  sqlLitelib.cpp  sqlLitelib.h
modules/SqlLite_Lib/models/SVM/: SVM_tfidf_feat.pkl  SVM_tfidf_voca.txt  cache.pickle  support_vector_machine.ipynb  svm_test.py
modules/SqlLite_Lib/models/SVM/.ipynb_checkpoints/: support_vector_machine-checkpoint.ipynb
modules/Widget_Lib/: BaseWidget.cpp  BaseWidget.h  CMakeLists.txt  FuncViewerWidget.cpp  FuncViewerWidget.h  VisualProcessWidget.cpp  VisualProcessWidget.h  Widget_Lib_global.h
modules/Widget_Lib/DataTableViewer/: CMakeLists.txt  DataTableViewer.ui  SqlInterface.h  datatableviewer.cpp  datatableviewer.h
modules/Widget_Lib/FuncViewer/: CMakeLists.txt  FuncViewerPage.cpp  FuncViewerPage.h  FuncViewerWidget.ui  Widget_Lib.cpp  Widget_Lib.h  widget.qrc
plugins_/: CMakeLists.txt
plugins_/pluginmanager/: CMakeLists.txt  pluginmanager_global.h  qtpluginsmanager.cpp  qtpluginsmanager.h  qtpluginsmanagerprivate.cpp  qtpluginsmanagerprivate.h
sip/: ads_globals.sip
src/: CMakeLists.txt  DockContainerWidget.cpp  DockManager.cpp  DockWidget.cpp  SysInfoFetcher.cpp  SysInfoFetcher.h  videobox.cpp  videobox.h  videopanel.cpp  videopanel.h
