cmake_minimum_required(VERSION 3.5)
project(QtADSExamples LANGUAGES CXX VERSION 0.0.1)
add_subdirectory(simple)
add_subdirectory(hideshow)
add_subdirectory(sidebar)
add_subdirectory(deleteonclose)
add_subdirectory(centralwidget)
add_subdirectory(autohide)
add_subdirectory(emptydockarea)
add_subdirectory(dockindock)